style: estiliza campos de patrimonio do ativo e exibe patrimonio na tabela de ativos